--- a/trunk/MobileClient/www/Assets/Main.css
+++ b/trunk/MobileClient/www/Assets/Main.css
@@ -10,7 +10,7 @@ html, body
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #FFFFFF;
+	background-color: #241E13;
 	font-family: sans-serif;
 	font-size: 16px;
 	text-decoration: none;
@@ -42,14 +42,18 @@ html, body
 	margin: auto;
 }
 
-/* Development desktop size *
+/* Development desktop size */
 @media only screen and (min-width : 1224px) {
 	#Screen
 	{
-		width: 620px;
-		height: 420px;
+		width: 480px;
+		height: 480px;
+		border: 1px solid green;
+		border: 5px double green;
+		border-radius: 8px;
+		margin-top: 32px;
 	}
-}*/
+}
 
 #GameWorldMap, #GameWorldMapEditor
 {
