--- a/trunk/MobileClient/www/Assets/Main.css
+++ b/trunk/MobileClient/www/Assets/Main.css
@@ -55,6 +55,15 @@ html, body
 	}
 }
 
+#MainMenu
+{
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+}
+
 #GameWorldMap, #GameWorldMapEditor
 {
 	position: absolute;
