--- a/trunk/MobileClient/www/Assets/Game.css
+++ b/trunk/MobileClient/www/Assets/Game.css
@@ -56,3 +56,48 @@
 {
 	background-color: rgb(36, 30, 19);
 }
+
+
+.stats_table {
+	margin: 12px auto;
+	border-collapse: collapse;
+}
+
+.stats_table td:nth-child(1) {
+	text-align: right;
+	width: 160px;
+}
+
+.stats_table td:nth-child(2) {
+	text-align: left;
+	width: 150px;
+	padding-left: 8px;
+}
+
+/* Stats formatting */
+.stat_unit_AttackLight > td
+{
+	padding-top: 10px;
+}
+
+.stat_unit_AttackRange > td
+{
+	padding-bottom: 10px;
+}
+
+
+/* Unit type value, check with the enum. */
+.stat_unit_type_0
+{
+	color: #C9DAF8;
+}
+			
+.stat_unit_type_1
+{
+	color: #DD7E6B;
+}
+			
+.stat_unit_type_2
+{
+	color: #F1C232;
+}
