--- a/trunk/MobileClient/www/Assets/Main.css
+++ b/trunk/MobileClient/www/Assets/Main.css
@@ -75,6 +75,12 @@ html, body
 	/*border: solid 1px green;*/
 }
 
+#GameWorldMap, #GameWorldMapEditor
+{
+	width: 100%;
+	height: 100%;
+}
+
 
 .toolbar_bottom_container
 {
