--- a/trunk/MobileClient/www/Assets/MenuScreen.css
+++ b/trunk/MobileClient/www/Assets/MenuScreen.css
@@ -154,7 +154,7 @@
 
 #GameWorldMapPreviewLoadingContent
 {
-	margin-top: 35%;
+	margin-top: 100px;
 	color: white;
 	text-align: center;
 	font-size: 20px;
