--- a/MobileClient/www/Assets/Main.css
+++ b/MobileClient/www/Assets/Main.css
@@ -162,7 +162,7 @@ html, body
 {
 	color: white;
 	width: 300px;
-	margin: 25% auto 0px auto;
+	margin: 200px auto 0px auto;
 }
 
 #PopUpDialogTitle, #PopUpDialogBody
