--- a/trunk/MobileClient/www/Assets/Main.css
+++ b/trunk/MobileClient/www/Assets/Main.css
@@ -331,6 +331,8 @@ button[disabled], .input_file_wrapper[disabled]
 	
 	color: white;
 	line-height: 26px;
+	
+	text-transform: uppercase;
 }
 
 .btn_generic_wide:active
@@ -353,4 +355,6 @@ button[disabled], .input_file_wrapper[disabled]
 	
 	color: white;
 	line-height: 26px;
+	
+	text-transform: uppercase;
 }
